# Tugas_RTC_Kelompok_15

./: README.md
industry_maintenance_nn_1/: Cargo.toml
industry_maintenance_nn_1/qt/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  qt_nn_predictor.py
industry_maintenance_nn_1/src/: data.rs  lib.rs  main.rs  model.rs  plot.rs  utils.rs
taylor/: .gitignore  Backup.txt  Guide Struktur Program QT x Rust.txt
taylor/qt/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
taylor/rust/: Cargo.toml
taylor/rust/src/: lib.rs
