[package]
name = "industry_maintenance_nn_1"
version = "0.1.0"
edition = "2024"

[lib]
name = "industry_maintenance_nn"
crate-type = ["cdylib"]  

[dependencies]
csv = "1.3.1"
libc = "0.2"
ndarray = { version = "0.16.1", features = ["serde"] }
ndarray-rand = "0.15.0"
rand = "0.8.5"
serde = { version = "1.0.219", features = ["derive"] }
bincode = "1.3"
serde_json = "1.0.140"
plotters = { version = "0.3.7", features = ["bitmap_backend", "bitmap_encoder"] }
once_cell = "1.21.3"
chrono = "0.4"
rand_distr = "0.5.1"
